--- a/app/blueprints/auth/auth_templates/signup.html
+++ b/app/blueprints/auth/auth_templates/signup.html
@@ -9,6 +9,7 @@
 {% endblock %}
 
 {% block content %}
+{% include './includes/nav.html' %}
 <div class="container">
     <img src="../static/images/degen_zone-transformed.png" height="200px" width="auto" alt="degen zone logo">
     <h2>Create a Degen Account</h2>
@@ -24,7 +25,7 @@
     <div class="mb-3">
         {{ form.email(class='form-control',placeholder='Email Address')}}
     </div>
-    <div id="emailHelp" class="form-text">Don't worry, we wont sell your info (づ￣ 3￣)づ</div>
+    <div id="emailHelp" class="form-text">Don't worry, we wont sell your info ❤</div>
     <div class="mb-3">
         {{ form.password(class='form-control',placeholder='Password')}}
     </div>
