mobile responsive password reset form

--- a/app/blueprints/auth/auth_templates/reset_password.html
+++ b/app/blueprints/auth/auth_templates/reset_password.html
@@ -1,19 +1,27 @@
 {% extends "base.html" %}
-{% block content %}
+{% block styles %} 
+<link rel="stylesheet" href="../static/styles/reset_password.css">
+{% endblock %}
 
-<h1>Reset Password</h1>
-{% with messages = get_flashed_messages() %}
-    {% if messages %}
-        <ul class="flashes"> 
-            {% for message in messages %}
-            <li>{{ message }}</li>
-            {% endfor %}
-        </ul>
-    {% endif %}
-{% endwith %}
-<form method="POST" action="{{ url_for('auth.reset_password') }}">
-    {{ form.hidden_tag() }}
-    {{ form.email.label }} {{ form.email }}
-    {{ form.submit }}
-</form>
+{% block content %}
+<div class="reset_password_background">
+    <div class="reset_password_body">
+        <h1 class="reset_password_h1">Reset Password</h1>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <ul class="flashes"> 
+                    {% for message in messages %}
+                    <li>{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+        {% endwith %}
+        <form method="POST" action="{{ url_for('auth.reset_password') }}">
+            {{ form.hidden_tag() }}
+            <p class="reset_password_p">{{ form.email.label }} {{ form.email(placeholder="Enter your email") }}</p>
+
+            <button type="submit" class="btn reset_password_btn">Submit</button>
+        </form>
+    </div>
+</div>
 {% endblock %}
