fixed flash message and logout user on auth routes

--- a/app/blueprints/auth/auth_templates/reset_password.html
+++ b/app/blueprints/auth/auth_templates/reset_password.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
+
 {% block styles %} 
 <link rel="stylesheet" href="../static/styles/reset_password.css">
+{% endblock %}
+
+{% block title %} 
+🔃 Reset Passowrd 🔃
 {% endblock %}
 
 {% block content %}
