fixed forgot password display on login

--- a/app/blueprints/auth/auth_templates/login.html
+++ b/app/blueprints/auth/auth_templates/login.html
@@ -23,6 +23,7 @@
             {{ form.password(class='form-control', placeholder='Password')}}
         </div>
         {{ form.submit_btn(class='btn d-block mx-auto mt-5') }}
+        <a href="{{ url_for('auth.reset_password') }}"><em>Forgot Password?</em></a>
     </form>
 </div>
 {% endblock %}
