additional styling for password reset form

--- a/app/blueprints/auth/auth_templates/reset_password.html
+++ b/app/blueprints/auth/auth_templates/reset_password.html
@@ -9,9 +9,11 @@
 {% endblock %}
 
 {% block content %}
+{% include './includes/nav.html' %}
 <div class="reset_password_background">
     <div class="reset_password_body">
         <h1 class="reset_password_h1">Reset Password</h1>
+        <h6 class="reset_password_h6">Request a reset password link by providing your email address below.</h6>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <ul class="flashes"> 
