minor update - optimization & improvements of copy

--- a/app/blueprints/auth/auth_templates/signup.html
+++ b/app/blueprints/auth/auth_templates/signup.html
@@ -12,7 +12,7 @@
 {% include './includes/nav.html' %}
 <div class="container">
     <img src="../static/images/degen_zone-transformed.png" height="200px" width="auto" alt="degen zone logo">
-    <h2>Create a Degen Account</h2>
+    <h2>Create an Account</h2>
     <h5><em>Trade smarter with Degen Zone.</em></h5>
 <form method="POST" class="w-50 mx-auto">
     {{ form.hidden_tag() }}
