--- a/app/blueprints/main/main_templates/search.html
+++ b/app/blueprints/main/main_templates/search.html
@@ -11,11 +11,12 @@
 {% block content %}
 {% include './includes/nav.html' %}
 <div class="background">
-    <h1 class="w-50 mx-auto"><u><em> Entering The Degen Zone </em></u></h1>
-    <h3 class="w-50 mx-auto"><em>Some calculations for the average degen</em></h3>
+    <h1 class="w-50 mx-auto"><u><em> Stay on Top of the Crypto Market with Degen Zone </em></u></h1>
+    <h3 class="w-50 mx-auto"><em>The Ultimate Crypto Price Alerting App</em></h3>
+    <h6 class="w-50 mx-auto"><em>Compare, analyze, and keep notes on the performance of your favorite coins with Degen Zone. Whether you are a newbie or a veteran, Degen Zone will allow you to track and make informed decisions in the volatile crypto market with ease.</em></h6>
     
     <form method="POST" class="w-50 mx-auto">
-      <label for="coin">Enter a cryptocurrency:</label><br>
+      <label for="coin">Enter a cryptocurrency to begin:</label><br>
       <input  class="crypto-form form mx-auto" type="text" id="coin" name="coin" placeholder="＼(ﾟｰﾟ＼)(ʘ ͟ʖ ʘ)( ﾉ ﾟｰﾟ)ﾉ"><br>
       <input class="btn btn-sm" type="submit" value="Search 🔎">
     </form>
