changed gaming list table to be mobile responsive

--- a/app/blueprints/lists/list_templates/gaming.html
+++ b/app/blueprints/lists/list_templates/gaming.html
@@ -15,7 +15,8 @@
 
 <div class="background">
     <h1 class="w-50 text-center mx-auto"><u>👾 Gaming Coins 👾</u></h1>
-    <table class="table table-dark table-hover w-75 mx-auto">
+    <div class="table-responsive">
+    <table class="table table-dark table-hover w-75 w-md-100 mx-auto">
         <thead>
             <tr>
                 <th scope="col">#</th>
@@ -54,7 +55,8 @@
 
         </tbody>
     </table>
-</div>
+    </div>
+    </div>
 
 {% endblock %}
 
