fix login & reset password links + mobile display

--- a/app/blueprints/auth/auth_templates/reset_password_confirm.html
+++ b/app/blueprints/auth/auth_templates/reset_password_confirm.html
@@ -5,15 +5,15 @@ Reset Password
 {% endblock %}
 
 {% block content %}
-<div class="container">
+<div class="container my-4">
     <h1>Reset Password</h1>
     <p>Please enter your new password and confirm it.</p>
     {% from "_formhelpers.html" import render_field %}
-    <form method="POST" action="{{ url_for('auth.reset_password_confirm', secret_key=secret_key) }}">
+    <form method="POST" action="{{ url_for('auth.reset_password_confirm', secret_key=secret_key) }}" class="mx-3 mx-md-5">
         {{ form.hidden_tag() }}
-        {{ render_field(form.new_password, class='form-control') }}
-        {{ render_field(form.new_password_confirm, class='form-control') }}
-        <button type="submit" class="btn btn-primary">Submit</button>
+        {{ render_field(form.new_password, class='form-control my-2') }}
+        {{ render_field(form.new_password_confirm, class='form-control my-2') }}
+        <button type="submit" class="btn btn-primary d-block mx-auto my-3">Submit</button>
     </form>
 </div>
 {% endblock %}
