--- a/app/blueprints/alerts/alerts_template/update_alert.html
+++ b/app/blueprints/alerts/alerts_template/update_alert.html
@@ -34,17 +34,17 @@
     </form>
     
     <!-- Button trigger modal -->
-    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal">
+    <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#Modal">
         Delete
     </button>
 
     <!-- Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
+    <div class="modal fade" id="Modal" tabindex="-1" aria-labelledby="ModalLabel"
         aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title fs-5" id="exampleModalLabel">Are you sure you want to delete this {{ alert.crypto_name }} alert?</h3>
+                    <h3 class="modal-title fs-5" id="warningModalLabel">Are you sure you want to delete this {{ alert.crypto_name }} alert?</h3>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
