+ button-focus-outline and add emojis to profile

--- a/app/blueprints/main/main_templates/profile.html
+++ b/app/blueprints/main/main_templates/profile.html
@@ -11,7 +11,7 @@
 {% block content %}
 {% include './includes/nav.html' %}
 <div class="background text-center mx-auto">
-    <h1>(☞ﾟヮﾟ)<u>☞ <em>Your Profile Details</em> ☜</u>(ﾟヮﾟ☜)</h1>
+    <h1>🚀 <u>Welcome to Your Crypto Command Center</u> 🚀</h1>
     <p><strong>Fellow Degen</strong> {{ user.first_name }} {{ user.last_name }}, glad to have you here!</p>
     <p><strong>Email:</strong> {{ user.email }}</p>
     <p><strong>Account Created On:</strong> {{ user.date_created.strftime('%Y-%m-%d %H:%M:%S') }}</p>
