--- a/app/blueprints/auth/auth_templates/login.html
+++ b/app/blueprints/auth/auth_templates/login.html
@@ -16,11 +16,13 @@
     <form method="POST" class="w-50 mx-auto">
         {{ form.hidden_tag() }}
         <div class="mb-3">
-            {{ form.email(class='form-control', placeholder="Email Address")}}
+            <input id="email" type="email" class='form-control' placeholder="Email Address" required>
+            <label for="email"></label>
             <div id="emailHelp" class="form-text">Don't worry, we wont sell your info ❤</div>
         </div>
         <div class="mb-3">
-            {{ form.password(class='form-control', placeholder='Password')}}
+            <input id="password" type="password" class='form-control' placeholder='Password' required>
+            <label for="password"></label>
         </div>
         {{ form.submit_btn(class='btn d-block mx-auto mt-5') }}
         <a id='resetPassword'  class="text-center d-block mt-4" href="{{ url_for('auth.reset_password') }}"><em>Forgot Password?</em></a>
