--- a/app/blueprints/auth/auth_templates/login.html
+++ b/app/blueprints/auth/auth_templates/login.html
@@ -16,13 +16,13 @@
     <form method="POST" class="w-50 mx-auto">
         {{ form.hidden_tag() }}
         <div class="mb-3">
-            <input id="email" type="email" class='form-control' placeholder="Email Address" required>
-            <label for="email"></label>
+            {{ form.email.label}}
+            {{ form.email(class='form-control', placeholder="Email Address")}}
             <div id="emailHelp" class="form-text">Don't worry, we wont sell your info ❤</div>
         </div>
         <div class="mb-3">
-            <input id="password" type="password" class='form-control' placeholder='Password' required>
-            <label for="password"></label>
+            {{ form.password.label }}
+            {{ form.password(class='form-control', placeholder='Password')}}
         </div>
         {{ form.submit_btn(class='btn d-block mx-auto mt-5') }}
         <a id='resetPassword'  class="text-center d-block mt-4" href="{{ url_for('auth.reset_password') }}"><em>Forgot Password?</em></a>
