update reset_password form and style

--- a/app/blueprints/auth/auth_templates/reset_password.html
+++ b/app/blueprints/auth/auth_templates/reset_password.html
@@ -13,7 +13,7 @@
 <div class="reset_password_background">
     <div class="reset_password_body">
         <h1 class="reset_password_h1">Reset Password</h1>
-        <h6 class="reset_password_h6">Request a reset password link by providing your email address below.</h6>
+        <h6 class="reset_password_h6">Send a reset password link by providing your email address below.</h6>
         {% with messages = get_flashed_messages() %}
             {% if messages %}
                 <ul class="flashes"> 
@@ -25,8 +25,10 @@
         {% endwith %}
         <form method="POST" action="{{ url_for('auth.reset_password') }}">
             {{ form.hidden_tag() }}
-            <p class="reset_password_p">{{ form.email.label }} {{ form.email(placeholder="Enter your email") }}</p>
-
+            <p class="reset_password_p">
+                {{ form.email.label }} 
+                {{ form.email(placeholder="Enter your email") }}
+            </p>
             <button type="submit" class="btn reset_password_btn">Submit</button>
         </form>
     </div>
