update pw reset fields

--- a/app/blueprints/auth/auth_templates/reset_password_confirm.html
+++ b/app/blueprints/auth/auth_templates/reset_password_confirm.html
@@ -8,11 +8,16 @@ Reset Password
 <div class="container my-4">
     <h1>Reset Password</h1>
     <p>Please enter your new password and confirm it.</p>
-    {% from "_formhelpers.html" import render_field %}
     <form method="POST" action="{{ url_for('auth.reset_password_confirm', secret_key=secret_key) }}" class="mx-3 mx-md-5">
         {{ form.hidden_tag() }}
-        {{ render_field(form.new_password, class='form-control my-2') }}
-        {{ render_field(form.new_password_confirm, class='form-control my-2') }}
+        <p class="reset_password_p">
+            {{ form.new_password.label }}
+            {{ form.new_password(class='form-control my-2') }}
+        </p>
+        <p class="reset_password_p">
+            {{ form.new_password_confirm.label }}
+            {{ form.new_password_confirm(class='form-control my-2') }}
+        </p>
         <button type="submit" class="btn btn-primary d-block mx-auto my-3">Submit</button>
     </form>
 </div>
