--- a/app/blueprints/auth/auth_templates/reset_password_confirm.html
+++ b/app/blueprints/auth/auth_templates/reset_password_confirm.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block styles %} 
+<link rel="stylesheet" href="../static/styles/reset_password_conf.css">
+{% endblock %}
+
 {% block title %}
 Reset Password
 {% endblock %}
