--- a/app/blueprints/auth/auth_templates/logout.html
+++ b/app/blueprints/auth/auth_templates/logout.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block styles %} 
-    <link rel="stylesheet" href="../static/styles/home.css">
+    <!-- <link rel="stylesheet" href="../static/styles/home.css"> -->
 {% endblock %}
 
 {% block title %} 
